samples/platforms/kubernetes/db-postgresql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-db-svc
spec:
  selector:
    app: postgresql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: asahi02/postgres:9.6
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
        ports:
        - containerPort: 5432
